fix: horizontal scroll

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,15 @@ a {
     color: #E74C3C;
 }
 
+.navbar-toggler {
+    padding: .25rem .75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: transparent;
+    border: 1px solid #e74c3b;
+    border-radius: .25rem;
+}
+
 .home-navbar {
     background-color: rgba(52,73,94,1);
     color: #fff;
@@ -24,6 +33,13 @@ a {
     font-weight: 400;
     padding: 5px 18px;
     text-align: center;
+}
+
+.home-navbar .navbar-nav .active>.nav-link, .home-navbar .navbar-nav .nav-link.active, 
+.home-navbar .navbar-nav .nav-link.show, .home-navbar .navbar-nav .show>.nav-link {
+    border: 2px solid #E74C3C;
+    border-radius: 50px;
+    color: #E74C3C;
 }
 
 .home-navbar .navbar-nav .nav-link:hover, .home-navbar .navbar-nav .nav-link:active {
@@ -48,12 +64,12 @@ a {
 }
 
 .divider {
-    margin: 4rem auto;
+    margin: 2rem auto;
     width: 180px;
 }
 
 .divider .divider-line-h {
-    background-color: #142638;
+    background-color: #E74C3C;
     height: 1px;
     margin: 0 auto auto;
     width: 100%;
@@ -137,6 +153,15 @@ a {
     padding: 6rem 0;
 }
 
+#feedback {
+    margin: 5rem 0;
+}
+
+#founder {
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+}
+
 .pre-footer-space {
     background-color: #2d3e4f;
     padding: 2.5rem 0;
@@ -147,13 +172,4 @@ a {
     color: #fff;
     padding: 0.7rem 0;
     text-align: center;
-}
-
-.navbar-toggler {
-    padding: .25rem .75rem;
-    font-size: 1.25rem;
-    line-height: 1;
-    background-color: transparent;
-    border: 1px solid #e74c3b;
-    border-radius: .25rem;
 }
